# paradis_experiment

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: experiment.sh  experiment_ap.sh  experiment_ap_3.sh  paradis_ompf_my_read.cc  paradis_ompf_my_read_3.cc  paradis_ompf_my_read_3_deep.cc  paradis_ompf_my_read_ap.cc  paradis_ompf_my_read_ap_3.cc  paradis_ompf_my_read_v2.cc  paradis_ompf_repair_read.cc  paradis_ompf_repair_read_3.cc  paradis_ompf_simd_read.cc  write.cc  write_1_1.cc  write_lognormal.cc  write_uni.cc  write_uni_1.cc  zipf_binary.c
